--- a/validators.html
+++ b/validators.html
@@ -4,9 +4,9 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
   <link href="validators.css" rel="stylesheet">
   <script src="validators.js" rel="script" defer></script>
-  <title>Document</title>
 </head>
 
 <body>
@@ -14,14 +14,14 @@
     <form class="form">
       <label for="input1">Input 1
       </label>
-        <input type="text" id="input1" onchange="validate()" placeholder="Please enter text...">
+        <input type="text" id="input1" placeholder="Please enter text...">
       <label for="input2">Input 2
       </label>
-        <input type="text" id="input2" onchange="validate()" placeholder="Please enter text...">
+        <input type="text" id="input2" placeholder="Please enter text...">
       <label for="input3">Input 3
       </label>
-        <input type="text" id="input3" onchange="validate()" placeholder="Please enter text...">
-      <button type="button" onclick="showDialog()" disabled="true" id="submitButton">SUBMIT</button>
+        <input type="text" id="input3" placeholder="Please enter text...">
+      <button type="button" disabled="true" id="submitButton">SUBMIT</button>
     </form>
   </div>
 </body>
@@ -36,7 +36,7 @@
     <h2>Input 3:</h2>
     <p id="output3"></p>
   </form>
-  <button type="button" onclick="dismissDialog()">OKAY!</button>
+  <button type="button" id="dismissButton">OKAY!</button>
 </dialog>
 
 </html>
