--- a/validators.html
+++ b/validators.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -29,14 +30,14 @@
 <dialog class="dialog" id="success">
   <h1 class="message">SUCCESS MESSAGE!!!</h1>
   <form method="dialog" class="dialogForm">
-    <h2>Input 1:</h2>
-    <p id="output1"></p>
-    <h2>Input 2:</h2>
-    <p id="output2"></p>
-    <h2>Input 3:</h2>
-    <p id="output3"></p>
+    <h3>Input 1:</h3>
+    <h2 id="output1"></h2>
+    <h3>Input 2:</h3>
+    <h2 id="output2"></h2>
+    <h3>Input 3:</h3>
+    <h2 id="output3"></h2>
   </form>
-  <button type="button" id="dismissButton">OKAY!</button>
+  <button type="reset" id="dismissButton">OKAY!</button>
 </dialog>
 
 </html>
