--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Vanilla Validators</title>
   <link href="validators.css" rel="stylesheet">
   <script src="validators.js" rel="script" defer></script>
 </head>
