--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
 </head>
 
 <body>
+  <header class="header">
+    <p>Vanilla Validators</p>
+  </header>
   <div class="bg">
     <form class="form">
       <label for="input1">Input 1
